--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aceternity-ui": "^0.2.2",
     "animejs": "^4.1.3",
     "dotenv": "^17.2.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "gsap": "^3.13.0",
     "simplex-noise": "^4.0.3",
