Updated frontend and backend files

--- a/.env
+++ b/.env
@@ -3,4 +3,9 @@
 
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
+
+# USDA FoodData Central API key for nutrient data
+# Get your key at: https://fdc.nal.usda.gov/api-key-signup.html
+FDC_API_KEY=TXvKD5GerdYlrNk3FJRKChzGcI1mFcFtnVlJ7vbb
+
 PING_MESSAGE="ping pong"
